# Connery

./: .gitignore  .travis.yml  Buildfile  CMakeLists.txt  ConneryStdLib.connery  Dockerfile  License.md  Makefile  README.md  dev-notes.txt  install.sh  main.c  util.c  util.h
.github/workflows/: docker-image.yml
.run/: Connery [test.connery].run.xml  Connery.run.xml  docker.build.run.xml  docker.clean.run.xml  docker.run.run.xml  local.build.run.xml  local.clean.run.xml  local.run.run.xml
src/: CMakeLists.txt  allocator.c  allocator.h  cval.c  cval.h  globals.h  hashtable.c  hashtable.h  http.c  http.h  json.c  json.h  json_parser.c  json_parser.h  main.c  mpc.c  strings.c  strings.h  time.c  time.h  trace.c  trace.h  util.c  util.h
src/stdlib/: Q.connery  constants.connery  csv.connery  error.connery  errors.connery  functional.connery  http.connery  lists.connery  logic.connery  logs.connery  main.connery  math.connery  strings.connery  types.connery  versions.connery
stdlib/: calendar.connery  constants.connery  convenience.connery  functional.connery  http.connery  io.connery  lists.connery  main.connery  math.connery  strings.connery  types.connery
